simul/power/gaboardi/k_2000/priv_20/genrr_ell2/k_2000_priv_20_genrr_ell2_n_200000_high_sig.out
Traceback (most recent call last):
  File "/mnt/nas/users/user213/LDPUts/simul/power/gaboardi/k_2000/priv_20/genrr_ell2/k_2000_priv_20_genrr_ell2_n_200000_high_sig.py", line 8, in <module>
    from server import server_ell2, server_multinomial_genRR, server_multinomial_bitflip
  File "/mnt/nas/users/user213/LDPUts/server.py", line 166
    del data_y
             ^
IndentationError: unindent does not match any outer indentation level
